--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -14,6 +14,9 @@
       <button class="cart-button" type="button">
        Корзина <i class="fas fa-shopping-cart"></i>
       </button>
+      <div class="cartWrapper hidden">
+     
+      </div>
     </div>
     </header>
     <main>
